<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="#FAFAFA"
    android:orientation="vertical"
    android:windowSoftInputMode="stateVisible|adjustResize">

    <ImageView
        android:id="@+id/comment_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/img_default_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/comment_profile"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/comment_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/commented_person"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/option_id"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/icon_setting" />
        </LinearLayout>

        <TextView
            android:id="@+id/comment_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_a_comment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/comment_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|start"
                android:text="@string/just_now"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/reply_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center|end"
                android:text="@string/reply" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/sub_comment_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/more_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/more_comments" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


                <ImageView
                    android:id="@+id/sub_comment_profile"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/img_default_user" />


                <TextView
                    android:id="@+id/sub_comment_person"
                    android:layout_width="251dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/sub_comment_profile"
                    android:text="@string/sub_commented_person"
                    android:textSize="12sp"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sub_comment_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sub_comment_person"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/sub_comment_profile"
                    android:text="@string/sub_comment_body"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/sub_comment_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/sub_comment_body"
                    android:text="@string/just_now"
                    android:textSize="12sp" />


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>