<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_hide_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radius_controller"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title=""
        android:minHeight="?android:attr/actionBarSize" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/comment_bottom_part"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/top_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/post_user_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_default_user"
                    android:contentDescription="@string/post_user_img" />

                <TextView
                    android:id="@+id/post_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/post_user_image"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/user_name"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_user_name"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/post_user_image"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="0dp"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/privacy"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/icon_onlyme" />

                    <TextView
                        android:id="@+id/post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/date"
                        android:textStyle="normal|italic" />
                </LinearLayout>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_user_image"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/status"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_image_placeholder" />


            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/reaction_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_rel"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="false"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:weightSum="2"
                        android:baselineAligned="false">


                        <LinearLayout
                            android:id="@+id/like_section"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/like_img"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/icon_like"
                                android:contentDescription="@string/like_img" />


                            <TextView
                                android:id="@+id/like_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_0_like"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/comment_section"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/icon_comment"
                                android:contentDescription="@string/comment_iv" />


                            <TextView
                                android:id="@+id/comment_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_0_comment"
                                android:textAlignment="center" />

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/comment_bottom_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:gravity="center"
        android:visibility="gone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:weightSum="10">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="8"
            android:ems="10"
            android:inputType="text" />

        <RelativeLayout
            android:id="@+id/comment_send_wrapper"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:background="@drawable/icon_background_before_comment">

            <ImageView
                android:id="@+id/comment_send"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:rotation="330"
                app:srcCompat="@drawable/icon_after_comment_send"
                android:contentDescription="@string/comment_send" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>