<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/cardview_dark_background"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/notfication_sender_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:foregroundGravity="center"
            android:src="@drawable/img_default_user" />


        <TextView
            android:id="@+id/notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/notfication_sender_profile"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/notification_title"
            android:textAllCaps="false"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notification_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_title"
            android:layout_toEndOf="@+id/notfication_sender_profile"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/notification_body"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/notification_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_body"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/notfication_sender_profile"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/notification_date"
            android:textSize="12sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
